--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ packages = [{include = "rclip", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 requests = "^2.32.3"
+cryptography = "^44.0.0"
 
 [tool.poetry.scripts]
 rclip2 = "rclip.main:main"
